--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,33 +1,157 @@
-disabled_rules:
-  - force_cast
-  - force_try
-  - line_length
-  - vertical_whitespace
+## By default, SwiftLint uses a set of sensible default rules you can adjust:
+#disabled_rules: # rule identifiers turned on by default to exclude from running
+#  - colon
+#  - line_length
+#  - comma
+#  - control_statement
+#opt_in_rules: # some rules are turned off by default, so you need to opt-in
+#  - empty_count # find all the available rules by running: `swiftlint rules`
+#
+## Alternatively, specify all rules explicitly by uncommenting this option:
+## only_rules: # delete `disabled_rules` & `opt_in_rules` if using this
+##   - empty_parameters
+##   - vertical_whitespace
+#
+#analyzer_rules: # rules run by `swiftlint analyze`
+#  - explicit_self
+#
+## Case-sensitive paths to include during linting. Directory paths supplied on the
+## command line will be ignored.
+#included:
+#  - Sources
+#excluded: # case-sensitive paths to ignore during linting. Takes precedence over `included`
+#  - Carthage
+#  - Pods
+#  - Sources/ExcludedFolder
+#  - Sources/ExcludedFile.swift
+#  - Sources/*/ExcludedFile.swift # exclude files with a wildcard
+#
+## If true, SwiftLint will not fail if no lintable files are found.
+#allow_zero_lintable_files: false
+#
+## If true, SwiftLint will treat all warnings as errors.
+#strict: false
+#
+## If true, SwiftLint will treat all errors as warnings.
+#lenient: false
+#
+## The path to a baseline file, which will be used to filter out detected violations.
+#baseline: Baseline.json
+#
+## The path to save detected violations to as a new baseline.
+#write_baseline: Baseline.json
+#
+## If true, SwiftLint will check for updates after linting or analyzing.
+#check_for_updates: true
+#
+## configurable rules can be customized from this configuration file
+## binary rules can set their severity level
+#force_cast: warning # implicitly
+#force_try:
+#  severity: warning # explicitly
+## rules that have both warning and error levels, can set just the warning level
+## implicitly
+##line_length: 110
+## they can set both implicitly with an array
+#type_body_length:
+#  - 300 # warning
+#  - 400 # error
+## or they can set both explicitly
+#file_length:
+#  warning: 500
+#  error: 1200
+## naming rules can set warnings/errors for min_length and max_length
+## additionally they can set excluded names
+#type_name:
+#  min_length: 4 # only warning
+#  max_length: # warning and error
+#    warning: 40
+#    error: 50
+#  excluded: iPhone # excluded via string
+#  allowed_symbols: ["_"] # these are allowed in type names
+#identifier_name:
+#  min_length: # only min_length
+#    error: 4 # only error
+#  excluded: # excluded via string array
+#    - id
+#    - URL
+#    - GlobalAPIKey
+#reporter: "xcode"
 
-force_unwrapping:
-  severity: error
+# By default, SwiftLint uses a set of sensible default rules you can adjust:
+disabled_rules: # rule identifiers turned on by default to exclude from running
+  - colon
+  - comma
+  - control_statement
+  - line_length # Disable line length violation rule
 
-force_cast:
-  severity: error
+opt_in_rules: # some rules are turned off by default, so you need to opt-in
+  - empty_count # find all the available rules by running: `swiftlint rules`
 
-force_try:
-  severity: error
+analyzer_rules: # rules run by `swiftlint analyze`
+  - explicit_self
 
-line_length:
-  warning: 120
-  error: 150
-  ignores_urls: true
-
-vertical_whitespace:
-  warning: 1
-  error: 2
-
-trailing_whitespace:
-  severity: error
-
-trailing_newline:
-  severity: error
-
+# Case-sensitive paths to include during linting. Directory paths supplied on the
+# command line will be ignored.
 included:
-  - ${PROJECT_DIR}/Sources
-  - ${PROJECT_DIR}/Tests
+  - Sources
+excluded: # case-sensitive paths to ignore during linting. Takes precedence over `included`
+  - Carthage
+  - Pods
+  - Sources/ExcludedFolder
+  - Sources/ExcludedFile.swift
+  - Sources/*/ExcludedFile.swift # exclude files with a wildcard
+
+# If true, SwiftLint will not fail if no lintable files are found.
+allow_zero_lintable_files: false
+
+# If true, SwiftLint will treat all warnings as errors.
+strict: false
+
+# If true, SwiftLint will treat all errors as warnings.
+lenient: false
+
+# The path to a baseline file, which will be used to filter out detected violations.
+baseline: Baseline.json
+
+# The path to save detected violations to as a new baseline.
+write_baseline: Baseline.json
+
+# If true, SwiftLint will check for updates after linting or analyzing.
+check_for_updates: true
+
+# configurable rules can be customized from this configuration file
+# binary rules can set their severity level
+force_cast: warning # implicitly
+force_try:
+  severity: warning # explicitly
+
+# rules that have both warning and error levels, can set just the warning level
+# implicitly
+type_body_length:
+  - 300 # warning
+  - 400 # error
+# or they can set both explicitly
+file_length:
+  warning: 500
+  error: 1200
+
+# naming rules can set warnings/errors for min_length and max_length
+# additionally they can set excluded names
+type_name:
+  min_length: 4 # only warning
+  max_length: # warning and error
+    warning: 40
+    error: 50
+  excluded: iPhone # excluded via string
+  allowed_symbols: ["_"] # these are allowed in type names
+identifier_name:
+  min_length: # only min_length
+    error: 4 # only error
+  excluded: # excluded via string array
+    - id
+    - URL
+    - GlobalAPIKey
+
+# Reporter format
+reporter: "xcode"
